org2/org2-peer0-svc.yaml
--- #---------------- Peer0 org2 Service ---------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: peer0-org2
  name: peer0-org2
  namespace: hyperledger
spec:
  type: LoadBalancer
  ports:
    - name: "peer-core"
      port: 7051
      targetPort: 7051
  selector:
    app: peer0-org2
---
#---------------- Peer0 org2 Metrics Service ---------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: peer0-org2
    metrics-service: "true"
  name: peer0-org2-metrics
  namespace: hyperledger
spec:
  type: LoadBalancer
  ports:
    - name: "peer-metrics"
      port: 9443
      targetPort: 9443
  selector:
    app: peer0-org2
